最后的webview修改。 我真的服了鸿蒙的web性能懒得出奇，页面平移切换GPU满载23fps，谁爱谁用吧。

--- a/ark_music/src/main/resources/rawfile/webview_gui/Page_Play/index.html
+++ b/ark_music/src/main/resources/rawfile/webview_gui/Page_Play/index.html
@@ -64,7 +64,7 @@
 
     <script src="js/bound.js"></script>
     <script src="js/vol_control.js"></script>
-    <script src="js/title_scroll.js"></script>
+    <script src="js/ai_play_page_title_scroll.js"></script>
     <script src="js/play_change.js"></script>
     <script src="js/update_time.js"></script>
     <script src="js/set_meta.js"></script>
