--- a/ark_music/src/main/resources/rawfile/webview_gui/Page_Files/Page_All_Files/index.html
+++ b/ark_music/src/main/resources/rawfile/webview_gui/Page_Files/Page_All_Files/index.html
@@ -19,7 +19,7 @@
 <body>
     
     <!--返回按钮-->
-    <button id="back" onclick="switch_page(2)"><img src="file/back.svg"></button>
+    <button id="back" onclick="page_switch(2)"><img src="file/back.svg"></button>
 
     <!-- 滑动列表 -->
     <div class="list_frame">
@@ -34,13 +34,16 @@
         </div>
 
         <!-- 占位符 -->
-        <div style="width: 100%; height: 100px;"></div>
+        <div style="width: 100%; height: 100px; text-align: center; font-size: 12px; color: rgb(171, 171, 171);">
+            因为鸿蒙对权限管理非常严格，所以目前只能把音频文件放到/Download/ArkMusic文件夹下才能读取识别。
+        </div>
 
     </div>
 
     <!-- js区块 -->
-    <script src="js/switch_page.js"></script>
+    <script src="js/page_switch.js"></script>
     <script src="js/get_all_songs.js"></script>
+    <script src="js/list_button_scroll.js"></script>
 
 </body>
 </html>
