--- a/ark_music/src/main/resources/rawfile/webview_gui/Page_Play/index.html
+++ b/ark_music/src/main/resources/rawfile/webview_gui/Page_Play/index.html
@@ -11,6 +11,7 @@
             align-items: center;
         }
     </style>
+    <link rel="stylesheet" href="css/icon.css">
     <link rel="stylesheet" href="css/meta_img.css">
     <link rel="stylesheet" href="css/title.css">
     <link rel="stylesheet" href="css/vol_control.css">
@@ -23,9 +24,9 @@
     <div id="page_play_meta_img" class="play_page_meta_img"><img src="file/CD.png"></div>
     
     <!-- 标题 -->
-    <div class="play_page_title"><div id="play_page_title_scroll"><p id="page_play_title">未知音频</p></div></div>
+    <div class="play_page_title"><div id="play_page_title_scroll"><p id="page_play_title" class="icon_p">未知音频</p></div></div>
     <!-- 副标题 -->
-    <div class="play_page_sub_title"><div id="play_page_sub_title_scroll"><p id="page_play_sub_title">未知艺术家</p></div></div>
+    <div class="play_page_sub_title"><div id="play_page_sub_title_scroll"><p id="page_play_sub_title" class="icon_p">未知艺术家</p></div></div>
 
     <!-- 音量控制器 -->
     <div class="vol_control">
@@ -34,17 +35,22 @@
             <!--进度滑块-->
             <input type="range" id="vol_control" name="vol_control" min="0", max="15", value="4"/>
             <!--进度展示条-->
-            <div id="vol_control_screen"></div>
+            <div id="vol_control_screen" class="icon_div"></div>
             <!--未展开前的图片-->    
-            <img src="file/vol_control.svg">
+            <div class="vol_control_icon"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1024 1024"><path class="icon" d="M636.7 896.742c-20.6 0-37.3-16.7-37.3-37.3v-612.6c0-24.9-20.2-45.1-45.1-45.1-6.4 0-12.6 1.3-18.4 3.9l-229 102.5c-31.1 13.9-64.2 21-98.3 21h-39c-52.3 0-94.9 42.6-94.9 94.9v160.8c0 51.7 42.1 93.8 93.8 93.8h39.9c34.2 0 67.5 7.1 98.7 21.2l167.2 75.3c18.8 8.4 27.1 30.5 18.7 49.3-8.4 18.8-30.6 27.1-49.3 18.7l-167.2-75.3c-21.5-9.7-44.5-14.6-68.1-14.6h-40c-92.9 0-168.4-75.5-168.4-168.4v-160.8c0-93.5 76-169.5 169.5-169.5h39c23.5 0 46.3-4.9 67.8-14.5l229-102.5c15.4-6.9 31.9-10.4 48.8-10.4 66 0 119.7 53.7 119.7 119.7v612.6c0.1 20.6-16.5 37.3-37.1 37.3zM883.8 792.642c-9.5 0-19.1-3.6-26.4-10.9-14.6-14.6-14.6-38.2 0-52.7l0.6-0.6c59.1-59.4 91.7-138.3 91.7-222.1 0-84.1-32.8-163.2-92.3-222.6-14.6-14.5-14.6-38.2 0-52.7 14.5-14.6 38.2-14.6 52.7 0 151.9 151.8 151.9 398.9 0.1 550.8-0.9 0.9-1.9 1.8-2.9 2.6-6.7 5.5-15.1 8.2-23.5 8.2z m0.1-37.3h0.1-0.1z"></path></svg></div>
         </div>
     </div>
 
     <!-- 控制框架 -->
     <div class="play_controller">
-        <button onclick="post_last_song()" class="play_button"><img src="file/play_last.svg" style="width: 50%; height: 50%; margin-right: 10%;"></button>
-        <button onclick="post_play_change()" id="play_page_play_change" class="play_button" style="width: 100px; height: 100px;"><img src="file/play_play.svg" style="width: 50%; height: 50%; margin-left: 15%;"></button>
-        <button onclick="post_next_song()" class="play_button"><img src="file/play_next.svg" style="width: 50%; height: 50%; margin-left: 10%;"></button>
+        <button onclick="post_last_song()" class="play_button"><div style="width: 50%; height: 50%; margin-right: 10px; display: flex; align-items: center; justify-content: center;"><svg style="z-index: 910;" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 45 35"><path class="icon" d="M13.181,7.4a5,5,0,0,1,8.638,0l8.795,15.077A5,5,0,0,1,26.295,30H8.705a5,5,0,0,1-4.319-7.519Z" transform="translate(15 35) rotate(-90)"/><path class="icon" d="M13.181,7.4a5,5,0,0,1,8.638,0l8.795,15.077A5,5,0,0,1,26.295,30H8.705a5,5,0,0,1-4.319-7.519Z" transform="translate(0 35) rotate(-90)"/></svg></div></button>
+        <button onclick="post_play_change()" class="play_button" style="width: 100px; height: 100px;">
+            <div id="play_page_play_change">
+               <svg style="z-index: 910;" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 40 40"><path class="icon" d="M19.164,7.9a4.93,4.93,0,0,1,8.957,0L42.955,36.461a6.254,6.254,0,0,1-.007,5.715,5.1,5.1,0,0,1-4.472,2.855H8.809a5.1,5.1,0,0,1-4.472-2.855,6.254,6.254,0,0,1-.007-5.715Z" transform="translate(45.03 -3.643) rotate(90)"/></svg>
+               <svg style="z-index: 910;" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 40 44"><rect class="icon" width="15" height="44" rx="7.5"/><rect class="icon" width="15" height="44" rx="7.5" transform="translate(25)"/></svg>
+            </div>
+        </button>
+        <button onclick="post_next_song()" class="play_button"><div style="width: 50%; height: 50%; margin-left: 10px; display: flex; align-items: center; justify-content: center;"><svg style="z-index: 910;" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 45 35"><path class="icon" d="M13.181,7.4a5,5,0,0,1,8.638,0l8.795,15.077A5,5,0,0,1,26.295,30H8.705a5,5,0,0,1-4.319-7.519Z" transform="translate(30) rotate(90)" /><path class="icon" d="M13.181,7.4a5,5,0,0,1,8.638,0l8.795,15.077A5,5,0,0,1,26.295,30H8.705a5,5,0,0,1-4.319-7.519Z" transform="translate(45) rotate(90)"/></svg></div></button>
     </div>
     
     <!--进度条-->
@@ -55,13 +61,13 @@
         <!--进度展示条-->
         <div id="play_page_playback_screen"></div>
         <!--时间显示-->
-        <p id="play_page_current_time" style="left: 0;">00:00</p>
+        <p id="play_page_current_time" class="icon_p" style="left: 0;">00:00</p>
         <!--时长-->
-        <p id="play_page_duration_time" style="right: 0;">00:00</p>
+        <p id="play_page_duration_time" class="icon_p" style="right: 0;">00:00</p>
 
     </div>
 
-
+    <script src="js/icon_color_change.js"></script>
     <script src="js/bound.js"></script>
     <script src="js/vol_control.js"></script>
     <script src="js/ai_play_page_title_scroll.js"></script>
