--- a/entry/src/main/resources/rawfile/webview_gui/example/index.html
+++ b/entry/src/main/resources/rawfile/webview_gui/example/index.html
@@ -2,9 +2,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ArkMusic</title>
+    <link rel="stylesheet" href="../public_css/color.css">
+    <style>
+        body {
+
+            margin: 0;
+            padding: 0;
+
+        }
+    </style>
 </head>
 <body>
     
+
+    <!-- 函数块 -->
+    <script src="../public_js/color_update.js"></script>
+    <script src="js/bound.js"></script>
+    <script src="js/test.js"></script>
+
 </body>
 </html>
