--- a/entry/src/main/resources/rawfile/webview_gui/example/index.html
+++ b/entry/src/main/resources/rawfile/webview_gui/example/index.html
@@ -20,6 +20,7 @@
     <script src="../public_js/color_update.js"></script>
     <script src="js/bound.js"></script>
     <script src="js/test.js"></script>
+    <script src="js/interface.js"></script>
 
 </body>
 </html>
