--- a/entry/src/main/resources/rawfile/webview_gui/sound_play/index.html
+++ b/entry/src/main/resources/rawfile/webview_gui/sound_play/index.html
@@ -9,20 +9,18 @@
 
             margin: 0;
             padding: 0;
-            background-color: rgba(255, 255, 255, 0);
 
         }
     </style>
 </head>
 <body>
-
-    <p>你冯</p>
     
 
     <!-- 函数块 -->
     <script src="../public_js/color_update.js"></script>
     <script src="js/bound.js"></script>
     <script src="js/test.js"></script>
+    <script src="js/interface.js"></script>
 
 </body>
 </html>
