--- a/entry/src/main/resources/rawfile/webview_gui/index.html
+++ b/entry/src/main/resources/rawfile/webview_gui/index.html
@@ -13,13 +13,34 @@
         iframe {
             border: none;
             width: 100%;
-            height: 100vh;
+            height: 100%;
+        }
+        .page {
+            position: absolute;
+            top: 50px;
+            left: 0;
+            width: 100vw;
+            height: calc(100vh - 50px - 25px);
+            display: flex;
+            flex-wrap: nowrap;
+            white-space: nowrap;
         }
     </style>
 </head>
 <body>
     
+    <!-- 菜单栏 -->
     <iframe src="taskbar/index.html" id="taskbar" style="z-index: 900; position: fixed; top: 0; left: 0;"></iframe>
+
+    <!-- 子页面 -->
+    <div class="page" id="page">
+
+        <!-- 列表 -->
+
+        <!-- 音频播放界面 -->
+        <iframe src="sound_play/index.html" id="sound_play"></iframe>
+
+    </div>
 
     <!-- 函数 -->
     <script>
