--- a/entry/src/main/resources/rawfile/webview_gui/sound_play/index.html
+++ b/entry/src/main/resources/rawfile/webview_gui/sound_play/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/sound_play_page.css">
     <link rel="stylesheet" href="css/sound_play_button.css">
     <link rel="stylesheet" href="css/play_range.css">
+    <link rel="stylesheet" href="css/meta.css">
+    <link rel="stylesheet" href="css/title.css">
+    <link rel="stylesheet" href="css/vol_control.css">
     <style>
         body {
 
@@ -17,19 +20,40 @@
     </style>
 </head>
 <body>
-    
 
     <!-- 播放页 -->
     <div class="sound_play_page">
 
         <!-- 专辑封面 -->
-        <div style="height: 50%;"></div>
+        <div style="height: 50%; container-type: size; display: flex; justify-content: center; align-items: center;">
+            <div id="meta_img" class="meta_img"><img src="files/CD.png"></div>
+        </div>
 
         <!-- 控制栏 -->
-        <div style="height: 50%;">
+        <div style="height: 50%; display: flex; flex-direction: column; justify-content: space-between; align-items: center;">
 
             <!-- 标题音量栏 -->
-            <div style="height: 25%;"></div>
+            <div style="flex: 0 0 auto; height: 100px; width: 100%; display: flex; justify-content: space-between; align-items: center; flex-wrap: nowrap; white-space: nowrap;">
+                <!-- 标题 -->
+                <div class="title_frame">
+                    <div class="title box_color"><p class="font_color">未知歌曲</p></div>
+                    <div class="sub_title box_color"><p class="font_color">未知歌手</p></div>
+                </div>
+                <!-- 音量条 -->
+                <div class="vol_control_frame">
+                    <div class="vol_control box_color" id="vol_control_button">
+                    <!--滑动框架-->
+                    <div class="vol_control_flex_frame">
+                        <!--进度滑块-->
+                        <input type="range" id="vol_control" name="vol_control" min="0", max="15", value="4"/>
+                        <!--进度展示条-->
+                        <div id="vol_control_screen" class="icon_div"></div>
+                        <!--未展开前的图片-->    
+                        <div class="vol_control_icon"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1024 1024"><path class="svg_color" d="M636.7 896.742c-20.6 0-37.3-16.7-37.3-37.3v-612.6c0-24.9-20.2-45.1-45.1-45.1-6.4 0-12.6 1.3-18.4 3.9l-229 102.5c-31.1 13.9-64.2 21-98.3 21h-39c-52.3 0-94.9 42.6-94.9 94.9v160.8c0 51.7 42.1 93.8 93.8 93.8h39.9c34.2 0 67.5 7.1 98.7 21.2l167.2 75.3c18.8 8.4 27.1 30.5 18.7 49.3-8.4 18.8-30.6 27.1-49.3 18.7l-167.2-75.3c-21.5-9.7-44.5-14.6-68.1-14.6h-40c-92.9 0-168.4-75.5-168.4-168.4v-160.8c0-93.5 76-169.5 169.5-169.5h39c23.5 0 46.3-4.9 67.8-14.5l229-102.5c15.4-6.9 31.9-10.4 48.8-10.4 66 0 119.7 53.7 119.7 119.7v612.6c0.1 20.6-16.5 37.3-37.1 37.3zM883.8 792.642c-9.5 0-19.1-3.6-26.4-10.9-14.6-14.6-14.6-38.2 0-52.7l0.6-0.6c59.1-59.4 91.7-138.3 91.7-222.1 0-84.1-32.8-163.2-92.3-222.6-14.6-14.5-14.6-38.2 0-52.7 14.5-14.6 38.2-14.6 52.7 0 151.9 151.8 151.9 398.9 0.1 550.8-0.9 0.9-1.9 1.8-2.9 2.6-6.7 5.5-15.1 8.2-23.5 8.2z m0.1-37.3h0.1-0.1z"></path></svg></div>
+                    </div>
+                </div>
+                </div>
+            </div>
 
             <!-- 三大金刚栏 -->
             <div class="sound_play_button">
@@ -44,15 +68,13 @@
                 </div>
                 <!-- 播放/暂停 -->
                 <div style="width: 30%;">
-                    <div class="last_next_button box_color">
-                        <div class="last_next_button_switch">
-                            <div id="last_next_button_switch">
-                                <div>
-                                    <svg id="button_play" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><rect width="24" height="24" opacity="0"></rect><g><path class="svg_color" d="M7.01 1.92Q6.05 1.34 4.98 1.55Q3.91 1.75 3.22 2.57Q2.52 3.38 2.52 4.51L2.52 19.46Q2.52 20.59 3.22 21.42Q3.91 22.25 4.98 22.45Q6.05 22.66 7.01 22.08L19.99 14.59Q20.98 14.04 21.32 13.02Q21.67 12 21.32 10.98Q20.98 9.96 19.99 9.41L7.01 1.92Z"></path></g></svg>
-                                </div>
-                                <div>
-                                    <svg id="button_pause" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><rect width="24" height="24" opacity="0"></rect><g><path class="svg_color" d="M7.52 3.24Q6.78 3.24 6.26 3.76Q5.74 4.28 5.74 4.99L5.74 18.98Q5.74 19.73 6.26 20.23Q6.78 20.74 7.52 20.74Q8.23 20.74 8.75 20.23Q9.26 19.73 9.26 18.98L9.26 4.99Q9.26 4.28 8.75 3.76Q8.23 3.24 7.52 3.24ZM16.52 3.24Q15.78 3.24 15.26 3.76Q14.74 4.28 14.74 4.99L14.74 18.98Q14.74 19.73 15.26 20.23Q15.78 20.74 16.52 20.74Q17.23 20.74 17.75 20.23Q18.26 19.73 18.26 18.98L18.26 4.99Q18.26 4.28 17.75 3.76Q17.23 3.24 16.52 3.24Z"></path></g></svg>
-                                </div>
+                    <div class="last_next_button box_color" style="display: grid;">
+                        <div class="last_next_button_switch" id="last_next_button_switch">
+                            <div>
+                                <svg id="button_play" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><rect width="24" height="24" opacity="0"></rect><g><path class="svg_color" d="M7.01 1.92Q6.05 1.34 4.98 1.55Q3.91 1.75 3.22 2.57Q2.52 3.38 2.52 4.51L2.52 19.46Q2.52 20.59 3.22 21.42Q3.91 22.25 4.98 22.45Q6.05 22.66 7.01 22.08L19.99 14.59Q20.98 14.04 21.32 13.02Q21.67 12 21.32 10.98Q20.98 9.96 19.99 9.41L7.01 1.92Z"></path></g></svg>
+                            </div>
+                            <div>
+                                <svg id="button_pause" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><rect width="24" height="24" opacity="0"></rect><g><path class="svg_color" d="M7.52 3.24Q6.78 3.24 6.26 3.76Q5.74 4.28 5.74 4.99L5.74 18.98Q5.74 19.73 6.26 20.23Q6.78 20.74 7.52 20.74Q8.23 20.74 8.75 20.23Q9.26 19.73 9.26 18.98L9.26 4.99Q9.26 4.28 8.75 3.76Q8.23 3.24 7.52 3.24ZM16.52 3.24Q15.78 3.24 15.26 3.76Q14.74 4.28 14.74 4.99L14.74 18.98Q14.74 19.73 15.26 20.23Q15.78 20.74 16.52 20.74Q17.23 20.74 17.75 20.23Q18.26 19.73 18.26 18.98L18.26 4.99Q18.26 4.28 17.75 3.76Q17.23 3.24 16.52 3.24Z"></path></g></svg>
                             </div>
                         </div>
                     </div>  
@@ -71,7 +93,7 @@
             </div>
 
             <!-- 进度条栏 -->
-            <div style="height: 15%; display: flex; justify-content: center; align-items: center;">
+            <div style="height: 25px; width: 100%; display: flex; justify-content: center; align-items: center;">
                 <!-- 遮罩 -->
                 <div class="range_frame box_color" style="width: 90%;"></div>
             </div>
@@ -85,6 +107,7 @@
     <script src="js/bound.js"></script>
     <script src="js/test.js"></script>
     <script src="js/interface.js"></script>
+    <script src="js/vol_control.js"></script>
 
 </body>
 </html>
