更新了arkweb架构

--- a/entry/src/main/resources/rawfile/webview_gui/play_taskbar_index.html
+++ b/entry/src/main/resources/rawfile/webview_gui/play_taskbar_index.html
@@ -77,10 +77,7 @@
     <!-- page页触控板 -->
     <div class="taskbar_page_touch" id="taskbar_page_touch"></div>
     <!-- 页面选择器（赋在page表面） -->
-    <div class="taskbar_page_screen" id="taskbar_page_screen">
-        <!-- 内层元素负责缩放动画 -->
-        <div class="taskbar_page_screen_inner" id="taskbar_page_screen_inner"></div>
-    </div>
+    <div class="taskbar_page_screen" id="taskbar_page_screen"></div>
 
     <!-- 子页面 -->
 
