--- a/entry/src/main/resources/rawfile/webview_gui/play_taskbar_index.html
+++ b/entry/src/main/resources/rawfile/webview_gui/play_taskbar_index.html
@@ -5,6 +5,7 @@
     <title>ArkMusic</title>
     <link rel="stylesheet" href="public_css/color.css">
     <link rel="stylesheet" href="taskbar_play/css/taskbar.css">
+    <link rel="stylesheet" href="taskbar_play/css/musicbar.css">
     <style>
         body {
             margin: 0;
@@ -36,7 +37,7 @@
             white-space: nowrap;
         }
         body * {
-            /* border: 1px solid palevioletred; */
+            border: 1px solid palevioletred;
         }
     </style>
 </head>
@@ -46,10 +47,10 @@
     <div class="taskbar box_color" id="taskbar">
 
         <!-- 音乐栏 -->
-        <div class="taskbar_music box_color" id="taskbar_music">
+        <div class="music_bar" id="music_bar">
 
             <!-- 触控板 -->
-            <div class="taskbar_touch" id="taskbar_music_touch"></div>
+            <div class="music_bar_touch" id="music_bar_touch"></div>
 
         </div>
 
@@ -66,9 +67,6 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><rect width="24" height="24" opacity="0"></rect><g><path class="svg_color" d="M12.02 9.43Q12.74 9.43 13.32 9.77Q13.9 10.1 14.23 10.69Q14.57 11.28 14.57 12.02Q14.57 12.74 14.24 13.33Q13.92 13.92 13.33 14.24Q12.74 14.57 12 14.57Q11.28 14.57 10.69 14.23Q10.1 13.9 9.77 13.31Q9.43 12.72 9.43 11.98Q9.43 11.26 9.78 10.67Q10.13 10.08 10.72 9.76Q11.3 9.43 12.02 9.43ZM12.05 7.15Q10.73 7.15 9.6 7.8Q8.47 8.45 7.81 9.55Q7.15 10.66 7.15 11.98Q7.15 13.3 7.8 14.42Q8.45 15.55 9.56 16.21Q10.68 16.87 12 16.87Q13.32 16.87 14.45 16.22Q15.58 15.58 16.22 14.46Q16.87 13.34 16.87 12.02Q16.87 10.7 16.22 9.59Q15.58 8.47 14.47 7.81Q13.37 7.15 12.05 7.15ZM13.56 23.09Q14.16 23.09 14.65 22.78Q15.14 22.46 15.38 21.91L16.13 20.16L16.27 20.09Q16.61 19.9 16.94 19.68L18.86 19.92Q19.46 19.99 19.99 19.73Q20.52 19.46 20.83 18.94L22.42 16.2Q22.7 15.67 22.67 15.08Q22.63 14.5 22.3 14.02L21.12 12.46L21.12 11.57L22.3 10.01Q22.66 9.53 22.68 8.93Q22.7 8.33 22.42 7.82L20.83 5.06Q20.54 4.56 20.02 4.3Q19.49 4.03 18.89 4.08L16.94 4.32Q16.61 4.08 16.2 3.89L15.43 2.06Q15.19 1.54 14.7 1.2Q14.21 0.86 13.61 0.86L10.44 0.86Q9.84 0.86 9.34 1.19Q8.83 1.51 8.59 2.06L7.82 3.89L7.63 3.98Q7.49 4.08 7.37 4.14Q7.25 4.2 7.1 4.3L5.14 4.08Q4.56 3.98 4.02 4.26Q3.48 4.54 3.17 5.04L1.58 7.8Q1.3 8.3 1.33 8.9Q1.37 9.5 1.7 9.98L2.9 11.57L2.9 12.38L1.7 13.97Q1.34 14.45 1.32 15.05Q1.3 15.65 1.58 16.15L3.14 18.89Q3.46 19.42 3.98 19.68Q4.51 19.94 5.11 19.87L7.03 19.66Q7.49 19.94 7.8 20.11L8.57 21.89Q8.78 22.44 9.28 22.76Q9.77 23.09 10.39 23.09L13.56 23.09ZM7.1 17.23L5.04 17.42L3.74 15.12L4.94 13.51Q5.23 13.08 5.23 12.58Q5.21 12.29 5.21 11.94Q5.21 11.59 5.23 11.33Q5.23 10.8 4.94 10.37L3.74 8.71L5.09 6.43L7.1 6.67Q7.39 6.7 7.67 6.64Q7.94 6.58 8.14 6.43Q8.59 6.12 9.12 5.88Q9.62 5.59 9.84 5.11L10.68 3.22L13.32 3.24L14.11 5.11Q14.3 5.57 14.83 5.88Q15.29 6.07 15.86 6.46Q16.37 6.79 16.87 6.7L18.89 6.5L20.18 8.81L19.03 10.34Q18.65 10.78 18.72 11.38Q18.74 11.66 18.74 12.01Q18.74 12.36 18.72 12.62Q18.65 13.18 19.01 13.63L20.18 15.22L18.84 17.5L16.9 17.28Q16.63 17.23 16.36 17.29Q16.08 17.35 15.86 17.52Q15.43 17.83 14.81 18.12Q14.59 18.24 14.39 18.44Q14.18 18.65 14.06 18.89L13.27 20.71L10.63 20.69L9.86 18.86Q9.62 18.36 9.14 18.1Q8.62 17.86 8.09 17.52Q7.73 17.26 7.25 17.26Z"></path></g></svg>
 
             </div>
-            
-            <!-- 页面选择信标(用来标记赋值位置的) -->
-            <div class="taskbar_page_choice" id="taskbar_page_choice"></div>
 
         </div>
         
@@ -89,11 +87,17 @@
     <script src="taskbar_play/js/start.js"></script>
 
     <!-- 测试用 -->
-    <button onclick="test()">123</button>
+    <button onclick="test()" style="width: 50%; height: 100px;">123</button>
     <script>
+        let tmp = false
         function test() {
             console.log("test");
-            taskbar_double(true)
+            tmp = !tmp
+            if (tmp) {
+                taskbar_double('hidden')
+            } else {
+                taskbar_double('double')
+            }
         }
     </script>
 
