--- a/entry/src/main/resources/rawfile/webview_gui/play_taskbar_index.html
+++ b/entry/src/main/resources/rawfile/webview_gui/play_taskbar_index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="public_css/color.css">
     <link rel="stylesheet" href="taskbar_play/css/taskbar.css">
     <link rel="stylesheet" href="taskbar_play/css/musicbar.css">
+    <link rel="stylesheet" href="taskbar_play/css/meta_img.css">
     <style>
         body {
             margin: 0;
@@ -49,6 +50,18 @@
         <!-- 音乐栏 -->
         <div class="music_bar" id="music_bar">
 
+            <!-- 专辑封面 -->
+            <div class="music_bar_meta_img">
+                <!-- 统一框架 -->
+                <div class="meta_img" id="music_bar_meta_img">
+                    <img src="taskbar_play/files/CD.png">
+                </div>
+            </div>
+            
+            <!-- 俩按钮 -->
+            <svg class="music_bar_play_pause_button" id="music_bar_button_play" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><rect width="24" height="24" opacity="0"></rect><g><path class="svg_color" d="M7.01 1.92Q6.05 1.34 4.98 1.55Q3.91 1.75 3.22 2.57Q2.52 3.38 2.52 4.51L2.52 19.46Q2.52 20.59 3.22 21.42Q3.91 22.25 4.98 22.45Q6.05 22.66 7.01 22.08L19.99 14.59Q20.98 14.04 21.32 13.02Q21.67 12 21.32 10.98Q20.98 9.96 19.99 9.41L7.01 1.92Z"></path></g></svg>
+            <svg class="music_bar_play_pause_button" id="music_bar_button_pause" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><rect width="24" height="24" opacity="0"></rect><g><path class="svg_color" d="M7.52 3.24Q6.78 3.24 6.26 3.76Q5.74 4.28 5.74 4.99L5.74 18.98Q5.74 19.73 6.26 20.23Q6.78 20.74 7.52 20.74Q8.23 20.74 8.75 20.23Q9.26 19.73 9.26 18.98L9.26 4.99Q9.26 4.28 8.75 3.76Q8.23 3.24 7.52 3.24ZM16.52 3.24Q15.78 3.24 15.26 3.76Q14.74 4.28 14.74 4.99L14.74 18.98Q14.74 19.73 15.26 20.23Q15.78 20.74 16.52 20.74Q17.23 20.74 17.75 20.23Q18.26 19.73 18.26 18.98L18.26 4.99Q18.26 4.28 17.75 3.76Q17.23 3.24 16.52 3.24Z"></path></g></svg>
+            
             <!-- 触控板 -->
             <div class="music_bar_touch" id="music_bar_touch"></div>
 
@@ -89,15 +102,9 @@
     <!-- 测试用 -->
     <button onclick="test()" style="width: 50%; height: 100px;">123</button>
     <script>
-        let tmp = false
         function test() {
             console.log("test");
-            tmp = !tmp
-            if (tmp) {
-                taskbar_double('hidden')
-            } else {
-                taskbar_double('double')
-            }
+            music_bar_meta_img.classList.toggle("active");
         }
     </script>
 
